changed repo name to dropdown-scroll-carousel

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marketplace-filter",
+  "name": "dropdown-scroll-carousel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
